--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  equatable: ^2.0.7
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
